2014-06-08  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf, NetBSD/pandora_server.conf: Updated
	default settings as the same as Linux ones.
	
014-06-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/PluginServer.pm
	lib/PandoraFMS/Core.pm: Add tags name macro to alerts and plugins.
	Add tags phones to plugins. Ticket #568

2014-06-04  Mario Pulido  <mario.pulido@artica.es>

	* conf/pandora_server.conf.new: Fixed bug

2014-06-03  Ramon Novoa  <rnovoa@artica.es>

	* util/recon_scripts/snmp-recon.pl: Create a ping module for agents that do
	  not respond to SNMP.

2014-06-03  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Changed to ignore 'FF timeout' except async
	modules.

2014-05-31  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Improved 'FF threshold' to be able to define
	timeout.

2014-05-30  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf.new: Review of default configuration file.

	* pandora_server.redhat.spec,
	  pandora_server.spec,
	  DEBIAN/control: Added perl telnet module as dependency.

2014-05-30  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf.new,
	  lib/PandoraFMS/Config.pm,
	  util/pandora_db.pl: Added a new option to move SNMP modules back to the
	  SNMP Enterprise Server.

2014-05-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm
	  lib/PandoraFMS/DataServer.pm: Ignore the agent group coming from the XML
	  if autocreate_group is set.

	* util/recon_scripts/snmp-recon.pl: Changed the default value for a
	  router-less scan.

2014-05-28  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Fixed wrong order in 
	recon script parameters in the conversion from json format

2014-05-28  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server,
	  lib/PandoraFMS/Config.pm: Removed getopts. Fixes a problem found by Junichi.

2014-05-27  Ramon Novoa  <rnovoa@artica.es>
